Prevent point additions and deductions from wrapping

--- a/app/styles/components/td-game/board/mob.scss
+++ b/app/styles/components/td-game/board/mob.scss
@@ -19,6 +19,7 @@ $mob-width: 4%;
   height: auto;
   position: absolute;
   transition: initial;
+  white-space: nowrap;
   width: auto;
 }
 
@@ -30,6 +31,7 @@ $mob-width: 4%;
   height: auto;
   position: absolute;
   transition: initial;
+  white-space: nowrap;
   width: auto;
 }
 
